add support for JWT